@@ -10,4 +10,4 @@ RDEPEND=arping? ( !net-misc/arping ) rarpd? ( !net-misc/rarpd ) traceroute? ( !n
 SLOT=0
 SRC_URI=http://www.skbuff.net/iputils/iputils-s20121221.tar.bz2 mirror://gentoo/iputils-s20121221-manpages.tar.bz2
 _eclasses_=eutils	9fb270e417e0e83d64ca52586c4a79de	fcaps	eeefea88d5fef2853d4c1e3770340302	flag-o-matic	c263990f1b677b0f0be0a3299f179762	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	c961250d50160cd37d6b7fd9e8429c92
-_md5_=325355d562ba9de6f60bb638412d5ef6
+_md5_=a8e4131e1f8bb274fe5ba40bc07c648d
