@@ -18,7 +18,7 @@ AUX openssh-6.8_p1-teraterm-hpn-glue.patch 536 SHA256 846aa1a470e27767103c8c390a
 AUX openssh-6.8_p1-teraterm.patch 1814 SHA256 e73e938524f15c4dc3368e7ba6b7d74ee2e83a7f0e97ed5460787d7caad04be1 SHA512 f39134d2257d86c5bf128754f8c1024057b9b1882984d5d70b86d2676d761b4a16681e76ae3f47f3abd23a07a75b6ebde6652431d9a86d5c3b9745c36577b8dc WHIRLPOOL c7d4dc5f2843fb6bc462d733a841b52599a9d49b344dc0a6fa71348624060736c02489130ae16692c5e1619200c954278df73a3f1020a77fe8712f99b329faaa
 AUX sshd.confd 396 SHA256 29c6d57ac3ec6018cadc6ba6cd9b90c9ed46e20049b970fdcc68ee2481a2ee41 SHA512 b9ae816af54a55e134a9307e376f05367b815f1b3fd545c2a2c312d18aedcf907f413e8bad8db980cdd9aad4011a72a79e1e94594f69500939a9cb46287f2f81 WHIRLPOOL 69f43e6192e009a4663d130f7e40ee8b13c6eb9cc7d960b5e0e22f5d477649c88806a9d219efef211f4346582c2bb51e40d230a8191e5953dbe08bfff976ae53
 AUX sshd.pam_include.2 156 SHA256 166136e27d653e0bf481a6ca79fecb7d9fa2fc3d597d041f97df595f65a8193c SHA512 d3f7e6ca8c9f2b5060ebccb259316bb59c9a7e158e8ef9466765a20db263a4043a590811f1a3ab072b718dbd70898bc69b77e0b19603d7f394b5ac1bd0a4a56c WHIRLPOOL ba7a0a8c3bb39c5fda69de34b822a19696398e0a8789211ac1faae787ee34f9639eb35efe29c67f874b5f9fe674742503e570f441c005974f4a0c93468b8970b
-AUX sshd.rc6.4 2242 SHA256 df06a4aa3103e526004465b861eed81640b29e1d4521e5880d09da395873b954 SHA512 78702b9dc12c1ca2f84b66cf87e1b3039419a3a8eca895e0f72f8ed4d725e93e9d7e6b2b4cc684fa1fa09521bfc441b00ab20e57aa963fa6d5ff3fdbf91a28d8 WHIRLPOOL 843a42ba5b47c9d3923da3d2872cba3508c3ed03976297d7311005541732a1f5cd8145fe17050a16e530d00ba8042c855540fba53e2bbc514cdac12c685b2e4d
+AUX sshd.rc6.4 2215 SHA256 26cdcade999f3797016c8f894e27173e5ccee73cf6ec8de8ffcca468d7cd6379 SHA512 74eff8bbcd8f4f36ad3bd2ba7fd4ac1ac52a8427b45a8e8a5dcd4ba77cdb257f3aa0bb47187da6cde253194607bb88092a20ee4b8338e82a080b61742e14fe1c WHIRLPOOL 489aff1cc52855fd6d8b29a15524ac400479c364e1899bf1a4a44bb7a9c52ee9cd413efb6678273a55aa4da53110634101cefd2ac551a880652ffc3d3bfb0d09
 AUX sshd.service 242 SHA256 1351c43fe8287f61255ace9fa20790f770d69296b4dd31b0c583983d4cc59843 SHA512 77f50c85a2c944995a39819916eb860cfdc1aff90986e93282e669a0de73c287ecb92d550fd118cfcc8ab538eab677e0d103b23cd959b7e8d9801bc37250c39c WHIRLPOOL 0f5c48d709274c526ceee4f26e35dcb00816ffa9d6661acc1e4e462acb38c3c6108b0e87783eff9da1b1868127c5550c57a5a0a9d7270b927ac4b92191876989
 AUX sshd.socket 136 SHA256 c055abcd10c5d372119cbc3708661ddffccdee7a1de1282559c54d03e2f109d9 SHA512 4d31d373b7bdae917dc0cf05418c71d4743e98e354aefcf055f88f55c9c644a5a0e0e605dbb8372c1b98d17c0ea1c8c0fee27d38ab8dbe23c7e420a6a78c6d42 WHIRLPOOL 102d87b708c31e5994e8005437c78b1aa756c6def4ee9ae2fa9be1438f328fc28c9152a4ff2528941be18f1311594490ecd98b66716ec74e970aa3725a98e2e5
 AUX sshd_at.service 176 SHA256 332f5ffc30456fe2494095c2aabd1e6e02075ce224e2d49708ac7ccf6d341998 SHA512 662a9c2668902633e6dbcb9435ac35bec3e224afdb2ab6a1df908618536ae9fc1958ba1d611e146c01fddb0c8f41eefdc26de78f45b7f165b1d6b2ee2f23be2a WHIRLPOOL aeb32351380dd674ef7a2e7b537f43116c189f7fddb8bdb8b2c109e9f62b0a73cc0f29f2d46270e658ab6409b8d3671ce9e0d0ba7c0d3674c2f85291a73e6df1
@@ -48,22 +48,22 @@ EBUILD openssh-6.8_p1-r3.ebuild 10218 SHA256 f5e40e903d70cb9373cd8d908cffc2eb42d
 EBUILD openssh-6.8_p1-r4.ebuild 10246 SHA256 a4dd9eb1911a2f73b7352a9626134d179dee0c68b12aeaf353df28ad3f444d45 SHA512 9b1835563bf69e6716e375dd6334b989e39ad2184e045ddbeb827f74210126e106b74539ac474e0a8357207dc0c853c1750f3693280859d9aa4ee08696b613db WHIRLPOOL 157639dfccb055ebd61a0f5f9b2b601f2fd49a466cd933fabff758bcb9b73903967c90bdcb8e7deb0595e54e05a913802b4e5c920b4645518cb0f3a49a8fd320
 EBUILD openssh-6.8_p1-r5.ebuild 10577 SHA256 7ad36f2bb01a24c2421e76c240c151c4c3bbcb0e99b5780e3ee4a11a1d9b1b10 SHA512 f301ab241cf9fed3612d6281143376e118f0e75813cf8c4409af4f76eb2a259272f97c072d178c6ae10cca9545ea12d1fec31ac5c4959ddc7b75fcbcfb8dd850 WHIRLPOOL adee554a35cb545c192312f9731e71d23479d89d1b219b945e59b50b94f887e0371d8580688ea5406ed0085a65dd7696a9ebf0ce10423edbaac3466b5509306a
 EBUILD openssh-6.8_p1.ebuild 10045 SHA256 13378c09cc4ceec7cd1b8c12ad925db87c9d37910edb679eb2404527226ee18d SHA512 daa5ba19f6fbc0ac7104c8c7822b22745736bf864999ade1e205d1b7184e0fd67f997c4635ab2335eafdf2d2917cf677764080d3004b24935f4189fce338010f WHIRLPOOL b8d40e35bf44bf26296c8d87e3b293b31f767920afb288a10deff8a9ceeb1c130b4da2697d7ce970091d0810c5d1e3839640e2ebee2f0d63b8ca5b0f430c0c0c
-MISC ChangeLog 93585 SHA256 0577ddbce91086375f1c6c41c0d4cdde4d7b32c0e8956af3e6df83e9be0a7b8d SHA512 0b7bff9e3ccfb30c4948677ca3aff2d192a22cd2d7d2cf9067c26bf5bde2940fe330b405f8743f634ff42583aa2337511ae652c750a36f83bf4a6bd84210426a WHIRLPOOL 3d40f4401edfaddebb3d7325ae523bf0af7e5edbdf368dc2807e0f16b7942a070f221ca7bea220da55363bed85a6f2d7b7858dce23fce364e5962a1ec0b8a8ce
+MISC ChangeLog 93690 SHA256 c9a6925fd765c10c0185186bd15457d9a5cef41c6e6e1dc23083fc57accf4171 SHA512 a2846b7f1a05feec7cf0636cf1fe5974de0a44a6bcf878cae3db381cc89266bb0ff2938fe87767bb76ad0e720c05a9c0390994b859f414ecf7f31bd93b55ac3a WHIRLPOOL f2ac21cd1f92cfa6226a8f559c3e906fd3a50cd942e0fc679428630baae17ab341a6d168088e9ad38e52089f9a45bff16d01817d3d436541ba172be5ca9c4966
 MISC metadata.xml 2049 SHA256 db7830f81086b967b8212af7c318bf27d22ac7db58b1a4d9c80cc86453ff03ab SHA512 3641e38203376c78fddc11b9d5861bdb629a1f9faf2768be5dc35f62ef3d37636a2f9f990e3ade1de2cec45d33a5fcdf7bb0dcd5f4376d40753fe29b354da42e WHIRLPOOL 6a7497491a150ede87bf20f5da5ed9003d545c9c376db7b78a6c1db66b1b90213f5f97d9211fb8b1ab204c1814c1a90d7be77a2d83cc045cf0762b4d2708c56a
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJVPw8JAAoJEPGu1DbS6WIAGc4P/jtXcoOTD3yW03DeK9o66R/s
-4TJpFY5OWSP4D+81G0eQMO6p+1jda+SNU5U1giT3g8T5+M82MZbgT7J4wH6G357/
-z5Gzd12oraC0Nsr6UDjFKQFmB238M8fsyLjaHQDTODc14HubAyba0c3HOWoGVGa1
-jj1K8UWAYdmU2bAa0P8CvFFl/uKZ393fWBrYYwXaZg6WkRfCKV/ZzqJABjg1It1S
-zKaqaZEZGSILwCn1sJF8oH8VXmYsD4Mmm/1yW/cU3t+1r4WbkhxRnZnga1tAlQZx
-QmiKCNbGj+R6pbSyQdZ4glOAtqptuT7cuZ16qHd2Sv9z72zD6BoqqgtPOI2VX+tL
-thvbpBF5gJ1DKPGPuc9ExUngbEeNVmj5Edbctvh9TKY1ize0P83pV0yfoNBDB9zp
-jzbZRg+OF+KPlDxbr8hXBcwYOXZ0Wix529sYEEH5PJT5aLSiURVnVJc2tdB442rk
-/XEdc6+MBrtCj5F4Xws2AiEv+7CTp7VBlJHI1bDBOtCaJ9Lk48omfVHVCerL1Uyl
-eLRPUWmVEy0nqE/NMunpjeXxb359HISqUIHj1TjanhoH+e+buHN3iYnaZFfB7vpK
-zhYTaLMjtULYHi9v7kLIDsHPsjhJ/haBbizYFiAdYPom7mOxwuE8rhVvNl/jTTCb
-PcQ50Phei1tSpxEmqYxS
-=JiAS
+iQIcBAEBCAAGBQJVRt/aAAoJEPGu1DbS6WIASt8P/ijWbSAr0gCXLlNPIZJApToC
+bBfg8nyojqOh5M4Hkbhp72eycoGotCNNdKErWxj7osZyFreYaYBW5ODNsQBEKFWz
+ihAY7LNw8dmHx2NksR+MaLgqY1mhFexAjBD8q/8rC2Rp/+QLDnovq3PBW/bq03MV
+oa5VlChKUoitlp74Xs0FLAkL9pg15zuHJHhnA1QBt2M9FBtVHpvcmwwEfmG6OQ9L
+Qs7tolO/jVaAkzwXbr0PJArJ+kFVEPP4GTDJzXKiWqvTYInc2hkxocMplQIqgL5U
+/XZb3d7U4Vl6S0J2cZFLl8zIv59AsWq5DrTFWhJgiHF9zl9W9UNHHZ/8TOA6s3hT
+l6HOu2pXBxu4Gz3hT8Cna7Gl3eZX0x8/JTU8lvPPxkt7NSNmtTH1X5tidUB/JeaH
+OPRA6fh0iOjW1qwLlwR7XDQ27Onw/5Z30kwXIplI8FIcKIaqPIMGlwn3E5XNcIKh
+JnslZ970KHhHxxiie5x8H1rNEUCBsIRYfF4TN/BohkHrUrdiff25Szi6v1U1ALbi
+I69ugjahsF3jXguR1+fS8pyet81GQDf9u5Yyyojd7cn4T6A9whuqCr7ERvxmPZF0
+JjWIGBu+gLvQHgs0BwqpH0k85V5JxtPLZ3tUlrUQJR7fSpckcsbyQTKFheDXkcLB
+fzqhSmZGiRMSeKksO6qD
+=iOel
 -----END PGP SIGNATURE-----
